# classificador-juridico-llm

./: README.md  main.py  pyproject.toml
